Dynamic show of the available cruises

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,28 +28,13 @@
       
   <main>
     <section class="search-section">
-      <input type="text" placeholder="Search cruises">
-      <button>Search</button>
+        <input type="text" id="searchBox" placeholder="Search cruises">
+        <button>Search</button>
     </section>
 
     <section class="content">
       <div class="itineraries">
         <h2>Cruise Itineraries</h2>
-        <div class="card">
-          <h3>Ocean Explorer</h3>
-          <p>Miami &bull; Nassau &bull; Freeport</p>
-          <p>$799 &mdash; 7 nights</p>
-        </div>
-        <div class="card">
-          <h3>Island Princess</h3>
-          <p>Barcelona &bull; Marseille &bull; Naples</p>
-          <p>$1.199 &mdash; 10 nights</p>
-        </div>
-        <div class="card">
-          <h3>Seaside Dream</h3>
-          <p>Fort Lauderdale &bull; San Juan</p>
-          <p>$1.499 &mdash; 12 nights</p>
-        </div>
       </div>
     </section>
 
