Promotions reception checkbox added. Only one user allowed.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,11 @@
             <input type="text" id="username" placeholder="Username">
             <input type="password" id="password" placeholder="Password">
             <button onclick="login()">Login</button>
-        </div>  
+        </div>
+        <div id="promoToggleContainer" style="display: none;">
+          <label>
+            <input type="checkbox" id="promoToggle">Receive promotions</label>
+        </div>
     </header>
       
   <main>
