Reserve Restrictions and Itineraries front update working

--- a/frontend/pay.html
+++ b/frontend/pay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pagar Reserva</title>
-    <link rel="stylesheet" href="pay.css">
+    <link rel="stylesheet" href="/pay.css">
 </head>
 <body>
     <h1>Pagamento de Reserva</h1>
@@ -12,6 +12,6 @@
         <button type="submit">Confirmar Pagamento</button>
         <button type="button" class="deny" id="denyBtn">Recusar Pagamento</button>
     </form>
-    <script src="pay.js"></script>
+    <script src="/pay.js"></script>
 </body>
 </html>
