--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,7 +37,9 @@
         <input type="date" id="departureDate" placeholder="Departure Date">
         <button onclick="handleSearch()">Search</button>
     </section>
-      
+
+    <div class="user-reservations" style="display:none"></div>
+
     <section class="content">
       <div class="itineraries">
         <h2>Cruise Itineraries</h2>
