Reserve SSE preview

--- a/frontend/reservation_status.html
+++ b/frontend/reservation_status.html
@@ -36,6 +36,7 @@
         </button>
     </main>
 
-    <script src="reservation_status.js"></script>
+    <script src="reservation_status.js" defer></script>
+
 </body>
 </html>
